force-app/main/default/objects/CTCT2__Settings__c/CTCT2__Settings__c.object-meta.xml
<CustomObject>
    <label>Constant Contact Settings</label>
    <nameField>
        <displayFormat>Set-{0}</displayFormat>
        <label>Setting</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Constant Contact Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>