force-app/main/default/objects/CTCT2__Settings__c/fields/CTCT2__CTCT_Password__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__CTCT_Password__c</fullName>
    <inlineHelpText>This password is encrypted and cannot be read by any Salesforce user.</inlineHelpText>
    <label>CTCT Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>