force-app/main/default/objects/CTCT2__Settings__c/fields/CTCT2__CTCT_Username__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__CTCT_Username__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Your Constant Contact user name.  Click the Create an Account link if you do not have a Constant Contact account.</inlineHelpText>
    <label>CTCT Username</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>