force-app/main/default/objects/CTCT2__Settings__c/fields/CTCT2__Daily_Frequency__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Daily_Frequency__c</fullName>
    <label>Daily Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CTCT2__Sync_Frequency__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Every 2 Hours</fullName>
            </value>
            <value>
                <fullName>Every 4 Hours</fullName>
            </value>
            <value>
                <fullName>Every 8 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>