force-app/main/default/objects/CTCT2__Settings__c/fields/CTCT2__Friday__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Friday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Friday</label>
    <type>Checkbox</type>
</CustomField>