force-app/main/default/objects/CTCT2__Settings__c/fields/CTCT2__Monthly_On__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Monthly_On__c</fullName>
    <label>Monthly On</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CTCT2__Sync_Frequency__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>4th</fullName>
            </value>
            <value>
                <fullName>last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>