force-app/main/default/objects/CTCT2__Settings__c/fields/CTCT2__Of_Every_Month__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Of_Every_Month__c</fullName>
    <label>Of Every Month</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CTCT2__Sync_Frequency__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>