force-app/main/default/objects/CTCT2__Settings__c/fields/CTCT2__Preferred_Start_Hour__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Preferred_Start_Hour__c</fullName>
    <formula>CASE( CTCT2__Preferred_Start_Time__c , &quot;12:00 AM&quot;, &quot;00&quot;,
&quot;1:00 AM&quot;, &quot;01&quot;,
&quot;2:00 AM&quot;, &quot;02&quot;,
&quot;3:00 AM&quot;, &quot;03&quot;,
&quot;4:00 AM&quot;, &quot;04&quot;,
&quot;5:00 AM&quot;, &quot;05&quot;,
&quot;6:00 AM&quot;, &quot;06&quot;,
&quot;7:00 AM&quot;, &quot;07&quot;,
&quot;8:00 AM&quot;, &quot;08&quot;,
&quot;9:00 AM&quot;, &quot;09&quot;,
&quot;10:00 AM&quot;, &quot;10&quot;,
&quot;11:00 AM&quot;, &quot;11&quot;,
&quot;12:00 PM&quot;, &quot;12&quot;,
&quot;1:00 PM&quot;, &quot;13&quot;,
&quot;2:00 PM&quot;, &quot;14&quot;,
&quot;3:00 PM&quot;, &quot;15&quot;,
&quot;4:00 PM&quot;, &quot;16&quot;,
&quot;5:00 PM&quot;, &quot;17&quot;,
&quot;6:00 PM&quot;, &quot;18&quot;,
&quot;7:00 PM&quot;, &quot;19&quot;,
&quot;8:00 PM&quot;, &quot;20&quot;,
&quot;9:00 PM&quot;, &quot;21&quot;,
&quot;10:00 PM&quot;, &quot;22&quot;,
&quot;11:00 PM&quot;, &quot;23&quot;, &quot;00&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Military time representation of preferred start time.</inlineHelpText>
    <label>Preferred Start Hour</label>
    <type>Text</type>
</CustomField>