force-app/main/default/objects/CTCT2__Settings__c/fields/CTCT2__ScheduledJobId__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__ScheduledJobId__c</fullName>
    <label>ScheduledJobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>