force-app/main/default/objects/CTCT2__Settings__c/fields/CTCT2__Sync_Frequency__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Sync_Frequency__c</fullName>
    <label>Sync Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Sync</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>