force-app/main/default/objects/CTCT2__Settings__c/fields/CTCT2__Sync_Opt_Out_To_CTCT__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Sync_Opt_Out_To_CTCT__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contacts who opt out in Salesforce will be marked as opting out in Constant Contact.  Contacts who opt in in Salesforce WILL NOT be marked as opting in in Constant Contact.</inlineHelpText>
    <label>Sync Opt Out To CTCT</label>
    <type>Checkbox</type>
</CustomField>