force-app/main/default/objects/CTCT2__Settings__c/fields/CTCT2__Tuesday__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Tuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tuesday</label>
    <type>Checkbox</type>
</CustomField>