force-app/main/default/objects/CTCT2__Settings__c/listViews/CTCT2__All.listView-meta.xml
<ListView>
    <fullName>CTCT2__All</fullName>
    <columns>NAME</columns>
    <columns>CTCT2__CTCT_Username__c</columns>
    <columns>CTCT2__Sync_Frequency__c</columns>
    <columns>CTCT2__Daily_Frequency__c</columns>
    <columns>CTCT2__Monthly_On__c</columns>
    <columns>CTCT2__Of_Every_Month__c</columns>
    <columns>CTCT2__Day_Of_The_Month__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>